* Fri Jun 03 2022 Trevor Vaughan <trevor@sicura.us> - 8.7.4
- Ensure that permissions do not flap on rotated audit log files

* Fri May 27 2022 Zach Schulte <zschulte@broadinstitute.org> - 8.7.3
- Fix the permissions on `/var/log/audit`

* Fri May 13 2022 Mike Riddle <mike@sicura.us> - 8.7.2
- Changed the auditd_sample_rulesets fact to look in both
  /usr/share/audit/sample-rules and /usr/share/doc/audit*/rules for
  sample rulesets.

* Thu Mar 24 2022 Mike Riddle <mike@sicura.us> - 8.7.1
- Fixed a bug preventing overflow_action from being set properly

* Mon Jun 14 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.7.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed May 19 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.5
- Fixed
  - Align EL8 STIG settings
- Changed
  - Bump supported puppet version to include 7
  - Always add the 'head' rules (global auditd config) settings when applying
    rule sets. These do not interfere with user-defined rules and are required
    for proper functionality of the system.

* Thu Apr 08 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.4
- Use `-F key=` in lieu of `-k` in the STIG profile, to match scanner updates.

* Sun Mar 07 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.6.3
- Switch auditd rules to be 'always,exit' instead of 'exit,always' to match the
  man pages and general scanner updates.

* Tue Feb 02 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.3
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Thu Jan 07 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.6.3
- Removed EL6 support

* Mon Nov 23 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.6.2-0
- Fixed a bug in which the module could not enable auditing in a system
  with auditing already disabled in the kernel, when replication of the
  audit logs to syslog was required.
  - Manifest would fail to compile because of a nil `auditd_version` fact.
