@@ -4,7 +4,6 @@
   else
     hypervisor = 'vagrant'
   end
-  vagrant_memsize = ENV['BEAKER_VAGRANT_MEMSIZE'] ? ENV['BEAKER_VAGRANT_MEMSIZE'] : 256
 -%>
 HOSTS:
   server-el8:
@@ -26,7 +25,6 @@ CONFIG:
   validate: false
   log_level: verbose
   type: aio
-  vagrant_memsize: <%= vagrant_memsize %>
 <% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
   puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
 <% end -%>
